# Convolver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
.github/skills/capture_assertion/: SKILL.md
Docs/: farina_algorithm_coding_reference.md  farina_ess_measurement_method.md
Source/: AppIcon.h  ConvolutionEngine.cpp  ConvolutionEngine.h  DarkLookAndFeel.cpp  DarkLookAndFeel.h  HelpWindow.cpp  HelpWindow.h  Main.cpp  MainComponent.cpp  MainComponent.h
tools/agent/: agent.config.json  build_vs.ps1  run_capture_assertions.ps1
